--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11360,8 +11360,8 @@ header.masthead h1, header.masthead .h1 {
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("../asset/img/bg-masthead.jpg") no-repeat center center;
-  background-size: cover;
+  /*background: url("./asset/img/bg-masthead.jpg") no-repeat center center;
+  background-size: cover;*/
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
